# ruststack

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
migrations/: 001_create_blog_posts.sql
src/: config.rs  database.rs  main.rs
src/handlers/: api.rs  web.rs
src/models/: blog.rs
src/services/: blog.rs
src/templates/: base.html  blog_list.html  blog_post.html  contact.html  home.html  mod.rs
