[package]
name = "ruststack"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.11"
actix-files = "0.6"
tokio = { version = "1.45", features = ["full"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "uuid",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
minijinja = { version = "2.10", features = ["loader"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.17", features = ["v4", "serde"] }
anyhow = "1.0"
lettre = "0.11"
dotenvy = "0.15"
# Production markdown parser
pulldown-cmark = { version = "0.13", features = ["html"] }
# HTML sanitization for security
ammonia = "4.1"

tracing = { version = "0.1", features = ["log"] }
tracing-actix-web = "0.7"
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
